@@ -501,6 +501,7 @@ metricbeat.modules:
 
 #------------------------------ ZooKeeper Module -----------------------------
 - module: zookeeper
+  enabled: true
   metricsets: ["mntr"]
   period: 10s
   hosts: ["localhost:2181"]
