@@ -1,4 +1,3 @@
 - module: zookeeper
-  metricsets: ["mntr"]
   period: 10s
   hosts: ["localhost:2181"]
